--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,9 +22,9 @@ jobs:
         run: rm -rf node_modules && yarn install --frozen-lockfile
 
       - name: Build Storybook
-        run: yarn run build-storybook
+        run: yarn build-storybook
 
       - name: Deploy Storybook
-        run: yarn run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        run: yarn deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
